| Summary: | ASTERISK-29312: res_fax: asterisk fails to publish the Stasis and ReceiveFax status messages if the remote Station ID contains invalid UTF-8 characters | ||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | fax |
| Date Opened: | 2021-02-23 11:59:15.000-0600 | Date Closed: | 2021-03-02 11:16:52.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_fax |
| Versions: | 16.16.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Error log if the Remote Station ID contains invalid UTF-8 characters.
json.c: Error building JSON from '{s: s, s: s}': Invalid UTF-8 string. 0: /usr/sbin/asterisk(ast_json_vpack+0x98) [0x4f3f28] 1: /usr/sbin/asterisk(ast_json_pack+0x8c) [0x4f3fcc] 2: /usr/sbin/asterisk(ast_channel_publish_varset+0x2b) [0x57aa0b] 3: /usr/sbin/asterisk(pbx_builtin_setvar_helper+0x121) [0x530641] 4: /usr/lib64/asterisk/modules/res_fax.so(+0x44fe) [0x7f27f4bff4fe] ... stasis_channels.c: Error creating message json.c: Error building JSON from '{s: s, s: s, s: s, s: s, s: s, s: s, s: o}': Invalid UTF-8 string. 0: /usr/sbin/asterisk(ast_json_vpack+0x98) [0x4f3f28] 1: /usr/sbin/asterisk(ast_json_pack+0x8c) [0x4f3fcc] 2: /usr/lib64/asterisk/modules/res_fax.so(+0x5acd) [0x7f27f4c00acd] ... res_fax.c: Error publishing ReceiveFax status message | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-02-23 11:59:17.401-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-03-02 11:16:53.517-0600 Change 15527 merged by Joshua Colp: res_fax: validate the remote/local Station ID for UTF-8 format [https://gerrit.asterisk.org/c/asterisk/+/15527|https://gerrit.asterisk.org/c/asterisk/+/15527] By: Friendly Automation (friendly-automation) 2021-03-02 11:17:06.405-0600 Change 15526 merged by Joshua Colp: res_fax: validate the remote/local Station ID for UTF-8 format [https://gerrit.asterisk.org/c/asterisk/+/15526|https://gerrit.asterisk.org/c/asterisk/+/15526] By: Friendly Automation (friendly-automation) 2021-03-02 11:17:17.361-0600 Change 15493 merged by Joshua Colp: res_fax: validate the remote/local Station ID for UTF-8 format [https://gerrit.asterisk.org/c/asterisk/+/15493|https://gerrit.asterisk.org/c/asterisk/+/15493] | ||